			Java Electric change log ( MAIN branch )

NOTE: Please place changes under the version that will be released next.

************************* Version 8.04x: *********************************

BUG: (9/7/06, GVG) Switching of metal numbers in TSMC90 was not working since proj preferences were introduced
FIX: Call the TechPref.allTechnologiesChanged() or TechPref.technologyChanged(). These functions also included
UI refresh calls.

BUG: (9/7/06, SMR) Spice Trailer cards may duplicate the "." in the extension (Bug #1215).
FIX: In Spice.writeTrailer(), removed extra ".".

BUG: (9/7/06, SMR) Layers Preferences shows pseudo layers, confuses (Bug #1190).
FIX: Psuedo layers no longer shown.  Also, opacity no longer just for printers.

BUG: (9/6/06, GVG) DRC on old technologies not working since a long time ago.
FIX: Correct index for a pair of layers.

IMP: (9/6/06, GVG) Changes in Build.xml

BUG: (9/4/06, SMR) Transistors in component menu doesn't show text.
FIX: In TechPalette.rotateTransistor(), copy variables.

IMP: (9/6/06, SMR) Minor improvements to cell graphing.

BUG: (9/6/06, DN) Crash reading old ELIB libraries (MAGIC9 .. MAGIC11).
FIX: In ELIB.readThLibrary check if nextInCell == null.

BUG: (9/6/06, DN) Force quit and save does not save export name change (Bug #1175).
FIX: In FileMenu.forceSave show message box with name of directory where libraries are saved.

BUG: (9/6/06, DN) New Display algorithm not good with old layout technologies (Bug #1213).
FIX: In classes from technology.technologies make factory layer colors match factory transparent layer definition.

BUG: (9/4/06, SMR) Component menu doesn't show text.
FIX: In PixelDrawing.drawNode(), always draw text if "forceVisible" is true.

BUG: (9/4/06, DN) Text is invisible (Bug #1158).
FIX: Add LayerDrawing.canDrawRelativeText threshold to smarter reject small text.

IMP: (8/31/06, SMR) Attributes dialog no longer shows "ATTR_" prefix.
