@@ -55,7 +55,6 @@ public class SelectionTab extends PreferencePanel
 	public void init()
 	{
 		selEasyCellInstances.setSelected(User.isEasySelectionOfCellInstances());
-		selEasyAnnotationText.setSelected(User.isEasySelectionOfAnnotationText());
 		selDraggingEnclosesEntireObject.setSelected(User.isDraggingMustEncloseObjects());
         cancelMoveDelayMillis = ClickZoomWireListener.theOne.getCancelMoveDelayMillis();
         selectionCancelMoveDelay.setText(String.valueOf(cancelMoveDelayMillis));
@@ -71,10 +70,6 @@ public class SelectionTab extends PreferencePanel
 		boolean currBoolean = selEasyCellInstances.isSelected();
 		if (currBoolean != User.isEasySelectionOfCellInstances())
 			User.setEasySelectionOfCellInstances(currBoolean);
-
-		currBoolean = selEasyAnnotationText.isSelected();
-		if (currBoolean != User.isEasySelectionOfAnnotationText())
-			User.setEasySelectionOfAnnotationText(currBoolean);
 
 		currBoolean = selDraggingEnclosesEntireObject.isSelected();
 		if (currBoolean != User.isDraggingMustEncloseObjects())
@@ -100,12 +95,12 @@ public class SelectionTab extends PreferencePanel
 	 * WARNING: Do NOT modify this code. The content of this method is
 	 * always regenerated by the Form Editor.
 	 */
-    private void initComponents() {//GEN-BEGIN:initComponents
+    // <editor-fold defaultstate="collapsed" desc=" Generated Code ">//GEN-BEGIN:initComponents
+    private void initComponents() {
         java.awt.GridBagConstraints gridBagConstraints;
 
         selection = new javax.swing.JPanel();
         selEasyCellInstances = new javax.swing.JCheckBox();
-        selEasyAnnotationText = new javax.swing.JCheckBox();
         selDraggingEnclosesEntireObject = new javax.swing.JCheckBox();
         jLabel55 = new javax.swing.JLabel();
         selectionCancelMoveDelay = new javax.swing.JTextField();
@@ -133,19 +128,10 @@ public class SelectionTab extends PreferencePanel
         gridBagConstraints.insets = new java.awt.Insets(4, 4, 4, 4);
         selection.add(selEasyCellInstances, gridBagConstraints);
 
-        selEasyAnnotationText.setText("Easy selection of annotation text");
-        gridBagConstraints = new java.awt.GridBagConstraints();
-        gridBagConstraints.gridx = 0;
-        gridBagConstraints.gridy = 1;
-        gridBagConstraints.gridwidth = 3;
-        gridBagConstraints.anchor = java.awt.GridBagConstraints.WEST;
-        gridBagConstraints.insets = new java.awt.Insets(4, 4, 4, 4);
-        selection.add(selEasyAnnotationText, gridBagConstraints);
-
         selDraggingEnclosesEntireObject.setText("Dragging must enclose entire object");
         gridBagConstraints = new java.awt.GridBagConstraints();
         gridBagConstraints.gridx = 0;
-        gridBagConstraints.gridy = 2;
+        gridBagConstraints.gridy = 1;
         gridBagConstraints.gridwidth = 3;
         gridBagConstraints.anchor = java.awt.GridBagConstraints.WEST;
         gridBagConstraints.insets = new java.awt.Insets(4, 4, 4, 4);
@@ -154,7 +140,7 @@ public class SelectionTab extends PreferencePanel
         jLabel55.setText("Cancel move if move done within:");
         gridBagConstraints = new java.awt.GridBagConstraints();
         gridBagConstraints.gridx = 0;
-        gridBagConstraints.gridy = 3;
+        gridBagConstraints.gridy = 2;
         gridBagConstraints.fill = java.awt.GridBagConstraints.HORIZONTAL;
         gridBagConstraints.insets = new java.awt.Insets(4, 4, 4, 4);
         selection.add(jLabel55, gridBagConstraints);
@@ -164,7 +150,7 @@ public class SelectionTab extends PreferencePanel
         selectionCancelMoveDelay.setToolTipText("Prevents accidental object movement when double-clicking");
         gridBagConstraints = new java.awt.GridBagConstraints();
         gridBagConstraints.gridx = 1;
-        gridBagConstraints.gridy = 3;
+        gridBagConstraints.gridy = 2;
         gridBagConstraints.fill = java.awt.GridBagConstraints.HORIZONTAL;
         gridBagConstraints.insets = new java.awt.Insets(4, 4, 4, 4);
         selection.add(selectionCancelMoveDelay, gridBagConstraints);
@@ -172,7 +158,7 @@ public class SelectionTab extends PreferencePanel
         jLabel58.setText("ms");
         gridBagConstraints = new java.awt.GridBagConstraints();
         gridBagConstraints.gridx = 2;
-        gridBagConstraints.gridy = 3;
+        gridBagConstraints.gridy = 2;
         gridBagConstraints.anchor = java.awt.GridBagConstraints.WEST;
         gridBagConstraints.insets = new java.awt.Insets(4, 4, 4, 4);
         selection.add(jLabel58, gridBagConstraints);
@@ -180,16 +166,16 @@ public class SelectionTab extends PreferencePanel
         useMouseOverHighlighting.setText("Enable Mouse-over highlighting");
         gridBagConstraints = new java.awt.GridBagConstraints();
         gridBagConstraints.gridx = 0;
-        gridBagConstraints.gridy = 4;
+        gridBagConstraints.gridy = 3;
         gridBagConstraints.gridwidth = 3;
-        gridBagConstraints.insets = new java.awt.Insets(4, 4, 4, 4);
         gridBagConstraints.anchor = java.awt.GridBagConstraints.WEST;
+        gridBagConstraints.insets = new java.awt.Insets(4, 4, 4, 4);
         selection.add(useMouseOverHighlighting, gridBagConstraints);
 
         getContentPane().add(selection, new java.awt.GridBagConstraints());
 
         pack();
-    }//GEN-END:initComponents
+    }// </editor-fold>//GEN-END:initComponents
 
 	/** Closes the dialog */
 	private void closeDialog(java.awt.event.WindowEvent evt)//GEN-FIRST:event_closeDialog
@@ -202,7 +188,6 @@ public class SelectionTab extends PreferencePanel
     private javax.swing.JLabel jLabel55;
     private javax.swing.JLabel jLabel58;
     private javax.swing.JCheckBox selDraggingEnclosesEntireObject;
-    private javax.swing.JCheckBox selEasyAnnotationText;
     private javax.swing.JCheckBox selEasyCellInstances;
     private javax.swing.JPanel selection;
     private javax.swing.JTextField selectionCancelMoveDelay;
